# SoundSight

./: .gitignore  LICENSE  README.md  SoundSight_PRD_v2.md  app.json  package-lock.json  package.json  run.sh  setup.sh
android/: settings.gradle
android/app/: build.gradle
backend/: README.md  audio_engine.py  audio_loader.py  cactus_gateway.py  config.py  detectors.py  feature_extractor.py  fusion_engine.py  main.py  mock_events.py  model_gateway.py  pyproject.toml  report_audio.py  schemas.py  signal_detector.py  smoke_test_cactus_audio.py  state_machine.py  vad_detector.py
backend/app/: __init__.py  config.py  main.py  schemas.py
backend/app/audio/: __init__.py  detector.py  loader.py  windowing.py
backend/app/model/: __init__.py  cactus_gateway.py  dummy_gateway.py  gateway.py  no_alert.py
backend/app/realtime/: __init__.py  event_reconciler.py  stream_runner.py
backend/reports/: audio_detection_report.json  audio_detection_report.md
backend/scripts/: report_audio.py  smoke_test_cactus_audio.py
frontend/: next.config.ts  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ClipSelector.tsx  DemoMode.tsx  GlobalNav.tsx  LanguageSelector.tsx  LiveMode.tsx  MinimalAlert.tsx  ModeNav.tsx  PhoneEmulator.tsx  ProgressBar.tsx
frontend/src/lib/: alert-events.ts  demo-alerts.ts  stream-events.ts
ios/: Podfile
ios/SoundSightApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/SoundSightApp.xcodeproj/: project.pbxproj
patches/: @react-native+gradle-plugin+0.85.3.patch
(+5 files in other folders)
